Mejora a Header y Footer y organizacion de las carpetas
Se repararon los archivos de header y footer, ahora se muestra todo en un orden correcto

--- a/BANCO/index.html
+++ b/BANCO/index.html
@@ -15,7 +15,7 @@
         <br>
         <br>    
         
-    <form name="Banco" method="POST" action="/Distribuidos/VinateriaWeb/modelo/CRUD_Banco.php">
+    <form name="Banco" method="POST" action="CRUD_Banco.php">
         
         <label>No. de tarjeta: <input  type = "text" placeholder="Ej. 0000000000" maxlength="20" onkeypress='return event.charCode >= 48 && event.charCode <= 57' id="Tj" name = "Tj">*</label><br>
         <br>
