Fixed bank receptor view and CRUD in general

--- a/BANCO/index.html
+++ b/BANCO/index.html
@@ -57,6 +57,7 @@
                     <input type = "submit" value="LEER" id = Le name = T>
                     <input type = "submit" value="ACTUALIZAR" id = Ac name = T >
                     <input type = "submit" value="BORRAR" id = Br name = T >
+                    </form>
                 </td>
             </tr>
 
@@ -88,7 +89,7 @@
     }
 
     function checkDigit(event) {
-        return (event.charCode >= 48 && event.charCode <= 57);
+        return (event.charCode >= 47 && event.charCode <= 57);
     }
 
     onload = function() {
