Added sound on hover and corrected read query

--- a/BANCO/index.html
+++ b/BANCO/index.html
@@ -1,6 +1,52 @@
 <html>
 <head>
-    <title>Informaci&oacute;n del banco</title>
+    <title>Bancoco - Tarejas</title>
+
+<script type="text/javascript">
+    
+    // Mouseover/ Click sound effect- by JavaScript Kit (www.javascriptkit.com)
+// Visit JavaScript Kit at http://www.javascriptkit.com/ for full source code
+
+//** Usage: Instantiate script by calling: var uniquevar=createsoundbite("soundfile1", "fallbackfile2", "fallebacksound3", etc)
+//** Call: uniquevar.playclip() to play sound
+
+var html5_audiotypes={ //define list of audio file extensions and their associated audio types. Add to it if your specified audio file isn't on this list:
+    "mp3": "audio/mpeg",
+    "mp4": "audio/mp4",
+    "ogg": "audio/ogg",
+    "wav": "audio/wav"
+}
+
+function createsoundbite(sound){
+    var html5audio=document.createElement('audio')
+    if (html5audio.canPlayType){ //check support for HTML5 audio
+        for (var i=0; i<arguments.length; i++){
+            var sourceel=document.createElement('source')
+            sourceel.setAttribute('src', arguments[i])
+            if (arguments[i].match(/\.(\w+)$/i))
+                sourceel.setAttribute('type', html5_audiotypes[RegExp.$1])
+            html5audio.appendChild(sourceel)
+        }
+        html5audio.load()
+        html5audio.playclip=function(){
+            html5audio.pause()
+            html5audio.currentTime=0
+            html5audio.play()
+        }
+        return html5audio
+    }
+    else{
+        return {playclip:function(){throw new Error("Your browser doesn't support HTML5 audio unfortunately")}}
+    }
+}
+
+//Initialize two sound clips with 1 fallback file each:
+
+var mouseoversound=createsoundbite("res/hover_button.mp3")
+var clicksound=createsoundbite("click.ogg", "click.mp3")
+
+</script>
+
 </head>
 
 <link rel="stylesheet" href="general.css">
@@ -11,7 +57,7 @@
         <source src="res/menu_loop.ogg" type="audio/mpeg" />
     </audio>    
         
-        <h1  align=center style="font-size: 60px; font-family: BurBigConBlack; font-weight: normal; color: white"> BANCO </h1>
+        <h1  align=center style="font-size: 60px; font-family: BurBigConBlack; font-weight: normal; color: white"> BANCOCO </h1>
 
     <table bgcolor="black" align="center" cellpadding="0" cellspacing="0">
         <tbody>
@@ -53,10 +99,10 @@
 
             <tr>
                 <td style="background: #2b3755" align="center">
-                    <input type = "submit" value="CREAR" id = Cr name = T>
-                    <input type = "submit" value="LEER" id = Le name = T>
-                    <input type = "submit" value="ACTUALIZAR" id = Ac name = T >
-                    <input type = "submit" value="BORRAR" id = Br name = T >
+                    <input onmouseover="mouseoversound.playclip()" type = "submit" value="CREAR" id = Cr name = T>
+                    <input onmouseover="mouseoversound.playclip()" type = "submit" value="LEER" id = Le name = T>
+                    <input onmouseover="mouseoversound.playclip()" type = "submit" value="ACTUALIZAR" id = Ac name = T >
+                    <input onmouseover="mouseoversound.playclip()" type = "submit" value="BORRAR" id = Br name = T >
                     </form>
                 </td>
             </tr>
