--- a/BANCO/index.html
+++ b/BANCO/index.html
@@ -46,6 +46,7 @@ var mouseoversound=createsoundbite("res/hover_button.mp3")
 var clicksound=createsoundbite("click.ogg", "click.mp3")
 
 </script>
+<meta charset="utf-8">
 
 </head>
 
@@ -71,7 +72,7 @@ var clicksound=createsoundbite("click.ogg", "click.mp3")
             <tr>
                 <td style="background: #515a79">
                     <form name="Banco" method="POST" action="CRUD_Banco.php" class="form_style_small">
-                        <input type="text" placeholder="N&uacute;mero de tarjeta" maxlength="20" onkeypress='return checkDigit(event)' id="Tj" name = "Tj">
+                        <input type="text" placeholder="N&uacute;mero de tarjeta" maxlength="20" onkeypress='return checkDigit(event)' id="Tj" name = "Tj" required="true">
                         <br>
                         <br>
 
