--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -13,8 +13,7 @@
 <body style="height:1500px">
 
 	<div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>
-  	Galería Brothers</h1>
+  <img src="ahh.jpg" class="img-fluid" alt="Responsive image">
 </div>
 
 </div>
