--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <title>Galería Brothers</title>
@@ -12,10 +13,9 @@
 </head>
 <body style="height:1500px">
 
-	<div class="jumbotron text-center" style="margin-bottom:0">
-  <img src="ahh.jpg" class="img-fluid" alt="Responsive image">
-</div>
-
+	<div id = "container">
+		<img src="Banner.png" class="img-fluid" alt="Responsive image">
+	
 </div>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <!-- Brand -->
