--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 
+
 <html lang="en">
 <head>
   <title>Galería Brothers</title>
@@ -77,7 +78,7 @@
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Tiempo
+        Tienda
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Link 1</a>
@@ -95,21 +96,112 @@
         <a class="dropdown-item" href="#">Link 3</a>
       </div>
     </li>
+    <div class="justify-content-end" style="justify-content: flex-end;">    
+    	<button type="button" class="btn btn-outline-primary justify-content-end" data-toggle="modal" data-target="#Modal_Signup">Registrarse</button>
+    	<button type="button" class="btn btn-success" data-toggle="modal" data-target="#Modal_login">Iniciar Sesión</button>
+</div>
+
   </ul>
 
 </nav>
 </div>
 
 <div class="container-fluid" style="margin-top:80px">
-  <h3>Top Fixed Navbar</h3>
-  <p>A fixed navigation bar stays visible in a fixed position (top or bottom) independent of the page scroll.</p>
-  <h1>Scroll this page to see the effect</h1>
+  <h1>Visitas</h1>
+  <h3>Nuestras Galerías</h3>
+  <p>
+  	
+  </p>
+  <h3>Visitas de escuelas</h3>
+  <p>
+  	
+  </p>
+  <h3>Grupo de visitas</h3>
+  <p>
+  	
+  </p>
+  <h3>Familias</h3>
+  <p>
+  	
+  </p>
+  <h3>Facilidades de investigación</h3>
+  <p>
+  	
+  </p>
+
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Footer</p>
 </div>
 
+<!-- Modal del Login -->
+	<div class="modal fade" id="Modal_login">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Iniciar sesión</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<div class="container">
+						<h2>Galería Brothers</h2>
+						<p>Favor de rellenar los siguientes campos con la información requerida para iniciar sesión</p>
+						<form method="post" id="log_form" action="<?php echo URL ?>user/login" class="was-validated">
+							<div class="form-group">
+								<label for="log_user">Usuario:</label>
+								<input type="text" class="form-control" id="log_user" placeholder="Enter username" name="user" required>
+								<div class="valid-feedback">Ingresado</div>
+								<div class="invalid-feedback">Favor de llenar este campo</div>
+							</div>
+							<div class="form-group">
+								<label for="log_pass">Contraseña:</label>
+								<input type="password" id="log_pass" class="form-control" placeholder="Contraseña" name="password" required>
+								<div class="valid-feedback">Ingresado</div>
+								<div class="invalid-feedback">Favor de llenar este campo</div>
+							</div>
+							<button type="button" id="log" class="btn btn-secondary btn-block">Iniciar Sesión</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal del Registro -->
+	<div class="modal fade" id="Modal_Signup">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Registrate!</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<div class="container">
+						<h2>Galería Brothers</h2>
+						<p>Favor de rellenar los siguientes campos con la información requerida para realizar el registro de usuario</p>
+						<form method="post" id="sign_form" action="<?php echo URL ?>user/registrar" class="was-validated">
+							<div class="form-group">
+								<label for="sign_name">Nombre de Usuario:</label>
+								<input type="text" class="form-control" id="sign_name" placeholder="Enter username" name="nombre" required>
+								<div class="valid-feedback">Ingresado</div>
+								<div class="invalid-feedback">Favor de llenar este campo</div>
+							</div>
+							<div class="form-group">
+								<label for="sign_pass">Contraseña:</label>
+								<input type="password" class="form-control" id="sign_pass" placeholder="Enter password" maxlength="16" name="password" required>
+								<div class="valid-feedback">Ingresado</div>
+								<div class="invalid-feedback">Favor de llenar este campo</div>
+							</div>
+							<div class="form-group form-check">    	
+							</div>
+							<button type="button" id="sign" class="btn btn-secondary btn-block">Registrarse</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
