--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <LINK REL=StyleSheet HREF="EstiloPagina.css" TYPE="text/css" MEDIA=screen>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -117,6 +118,33 @@
   	
   </p>
   <h3>Grupo de visitas</h3>
+
+  <div class="row text-center">
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CTonala.jpg" alt="CTonala">
+      <p><strong>Ceti Tonala</strong></p>
+      <p>Visita del 27 Noviembre 2019</p>
+     <!-- <button class="btn">Buy Tickets</button>-->
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src=".C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CColomos.jpg" alt="CColomos">
+      <p><strong>Ceti Colomos</strong></p>
+      <p>Visita del 30 Febrero 2019</p>
+      <!--<button class="btn">Buy Tickets</button>-->
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\TEC.jpg" alt="TEC" style="width: 400 height: 600">
+      <p><strong>TEC de Monterrey</strong></p>
+      <p>Visita del 30 Mayo 2019</p>
+      <!--<button class="btn">Buy Tickets</button>-->
+    </div>
+  </div>
+</div>
   <p>
   	
   </p>
@@ -125,6 +153,9 @@
   	
   </p>
   <h3>Facilidades de investigación</h3>
+  
+
+
   <p>
   	
   </p>
