--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -12,7 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<body style="height:1500px">
+<body data-spy="scroll" data-target=".navbar" data-offset="50" style="height:1500px">
 
 	<div id = "container">
 		<img src="Banner.png" class="img-fluid" alt="Responsive image">
@@ -51,30 +51,22 @@
         Visitas
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="#Vng">Nuestras Galerías</a>
+        <a class="dropdown-item" href="#Vve">Visitas de escuelas</a>
+        <a class="dropdown-item" href="#VGv">Grupo de visitas</a>
+        <a class="dropdown-item" href="#Vf">Familias</a>
+        <a class="dropdown-item" href="#Vfi">Facilidades de investigación</a>
       </div>
     </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+   <li class="nav-item">
+      <a class="nav-link" href="#QhdN">
         Que hay de nuevo?
       </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
-      </div>
     </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+    <li class="nav-item">
+      <a class="nav-link" href="#UyS">
         Unete y Soporte
       </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
-      </div>
     </li>
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -106,29 +98,71 @@
 </nav>
 </div>
 
-<div class="container-fluid" style="margin-top:80px">
-  <h1>Visitas</h1>
-  <h3>Nuestras Galerías</h3>
+<div id="QhdN" class="container-fluid" style="margin-top:10px">
+  <h1>Que hay de nuevo?</h1>
+  <h3>Exhibiciones</h3>
   <p>
   	
   </p>
-  <h3>Visitas de escuelas</h3>
+  <h3>Eventos</h3>
   <p>
   	
   </p>
-  <h3>Grupo de visitas</h3>
-  <p>
-  	
-  </p>
-  <h3>Familias</h3>
-  <p>
-  	
-  </p>
-  <h3>Facilidades de investigación</h3>
-  <p>
-  	
-  </p>
+</div>
 
+<div class="container-fluid" style="margin-top:80px">
+<h1>Visitas</h1>
+</div>
+<div id="Vng">
+	<h3>Nuestras Galerías</h3>
+  <p>
+  	
+  </p>
+</div>
+
+<div id="Vve">
+<h3>Visitas de escuelas</h3>
+  <p>
+  	
+  </p>	
+</div>
+  
+ <div id="VGv">
+<h3>Grupo de visitas</h3>
+  <p>
+  	
+  </p>	
+</div>
+
+<div id="Vf">
+ <h3>Familias</h3>
+  <p>
+  	
+  </p>	
+</div>
+  
+<div id="Vfi">
+<h3>Facilidades de investigación</h3>
+  <p>
+  	
+  </p>	
+</div>
+ 
+
+<div id = "UyS" class="container-fluid" style="margin-top:80px">
+  <h1>Únete y soporte </h1>
+  <h3>Se un amigo de la galería</h3>
+  <p>
+  	
+  </p>
+  <h3>Voluntarios y donaciones</h3>
+  <p>
+  	
+  </p>
+  <h3>Soporte</h3>
+  <p>
+  	
+  </p>
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
