--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -122,7 +122,7 @@
   <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CTonala.jpg" alt="CTonala">
+      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CTonala.jpg" alt="CTonala" style="width: 50%; height: 100%;">
       <p><strong>Ceti Tonala</strong></p>
       <p>Visita del 27 Noviembre 2019</p>
      <!-- <button class="btn">Buy Tickets</button>-->
@@ -130,7 +130,7 @@
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src=".C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CColomos.jpg" alt="CColomos">
+      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CColomos.jpg" alt="CColomos" style="width: 50%; height: 70%;">
       <p><strong>Ceti Colomos</strong></p>
       <p>Visita del 30 Febrero 2019</p>
       <!--<button class="btn">Buy Tickets</button>-->
@@ -138,7 +138,7 @@
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\TEC.jpg" alt="TEC" style="width: 400 height: 600">
+      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\TEC.jpg" alt="TEC" style="width: 50%; height: 100%;">
       <p><strong>TEC de Monterrey</strong></p>
       <p>Visita del 30 Mayo 2019</p>
       <!--<button class="btn">Buy Tickets</button>-->
