--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -11,6 +11,127 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+  <style>
+  
+  body {
+    font: 400 15px/1.8 Lato, sans-serif;
+    color: #777;
+  }
+  h3, h4 {
+    margin: 10px 0 30px 0;
+    letter-spacing: 10px;      
+    font-size: 20px;
+    color: #111;
+  }
+  .container {
+    padding: 80px 120px;
+  }
+  .person {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 80%;
+    height: 80%;
+    opacity: 0.7;
+  }
+  .person:hover {
+    border-color: #f1f1f1;
+  }
+  .carousel-inner img {
+    -webkit-filter: grayscale(90%);
+    filter: grayscale(90%); /* make all photos black and white */ 
+    width: 100%; /* Set width to 100% */
+    margin: auto;
+  }
+  .carousel-caption h3 {
+    color: #fff !important;
+  }
+  @media (max-width: 600px) {
+    .carousel-caption {
+      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+    }
+  }
+  .bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
+  }
+  .bg-1 h3 {color: #fff;}
+  .bg-1 p {font-style: italic;}
+  .list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+  }
+  .list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail p {
+    margin-top: 15px;
+    color: #555;
+  }
+
+  .btn:hover, .btn:focus {
+    border: 1px solid #333;
+    background-color: #fff;
+    color: #000;
+  }
+
+ 
+  .nav-tabs li a {
+    color: #777;
+  }
+  #googleMap {
+    width: 100%;
+    height: 400px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+  }  
+  .navbar {
+    margin-bottom: 0;
+    background-color: #2d2d30;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity: 0.9;
+  }
+
+  .open .dropdown-toggle {
+    color: #fff;
+    background-color: #555 !important;
+  }
+  .dropdown-menu li a {
+    color: #000 !important;
+  }
+  .dropdown-menu li a:hover {
+    background-color: red !important;
+  }
+  footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 32px;
+  }
+  footer a {
+    color: #f5f5f5;
+  }
+  footer a:hover {
+    color: #777;
+    text-decoration: none;
+  }  
+  .form-control {
+    border-radius: 0;
+  }
+  textarea {
+    resize: none;
+  }
+  </style>
+
+
+
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50" style="height:1500px">
 
@@ -87,6 +208,7 @@
         <a class="dropdown-item" href="#">Link 2</a>
         <a class="dropdown-item" href="#">Link 3</a>
       </div>
+
     </li>
     <div class="justify-content-end" style="justify-content: flex-end;">    
     	<button type="button" class="btn btn-outline-primary justify-content-end" data-toggle="modal" data-target="#Modal_Signup">Registrarse</button>
@@ -110,6 +232,21 @@
   </p>
   <h3>Grupo de visitas</h3>
 
+  
+
+<div class="container-fluid" style="margin-top:80px">
+<h1>Visitas</h1>
+</div>
+<div id="Vng">
+	<h3>Nuestras Galerías</h3>
+  <p>
+
+  </p>
+</div>
+
+<div id="Vve">
+<h3>Visitas de escuelas</h3>
+  <p>
   <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
@@ -137,28 +274,13 @@
   </div>
 
 </div>
-
-<div class="container-fluid" style="margin-top:80px">
-<h1>Visitas</h1>
-</div>
-<div id="Vng">
-	<h3>Nuestras Galerías</h3>
-  <p>
-  	
-  </p>
-</div>
-
-<div id="Vve">
-<h3>Visitas de escuelas</h3>
-  <p>
-  	
   </p>	
 </div>
   
  <div id="VGv">
 <h3>Grupo de visitas</h3>
   <p>
-  	
+ 
   </p>	
 </div>
 
@@ -193,11 +315,57 @@
   </p>
 </div>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
+<div class="container">
+  <h3 class="text-center">¡Contactanos!</h3>
+  <p class="text-center"><em>¿Tienes algina sugerencia?</em></p>
+  <div class="row test">
+    <div class="col-md-4">
+      <p>¡Deja un Comentario!</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Tonalá, Mexico</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Teléfono: +55 33 1213 1813</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Email: GaleriaBrothers@gmail.com</p>
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        </div>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        </div>
+      </div>
+      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+      <div class="row">
+        <div class="col-md-12 form-group">
+          <button class="btn" type="submit">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
+<!-- FOOTER -->
+<style>
+/* Add a dark background color to the footer */
+footer {
+  background-color: #2d2d30;
+  color: #f5f5f5;
+  padding: 32px;
+}
+
+footer a {
+  color: #f5f5f5;
+}
+
+footer a:hover {
+  color: #777;
+  text-decoration: none;
+}
+</style>
+
+
 <!-- Modal del Login -->
+
 	<div class="modal fade" id="Modal_login">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -231,6 +399,9 @@
 	</div>
 
 	<!-- Modal del Registro -->
+
+
+
 	<div class="modal fade" id="Modal_Signup">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -264,6 +435,46 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+<!-- Footer -->
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>Footer</a></p> 
+</footer>
+
+<script>
+$(document).ready(function(){
+  // Initialize Tooltip
+  $('[data-toggle="tooltip"]').tooltip(); 
+  
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+
+    // Prevent default anchor click behavior
+    event.preventDefault();
+
+    // Store hash
+    var hash = this.hash;
+
+    // Using jQuery's animate() method to add smooth page scroll
+    // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+    $('html, body').animate({
+      scrollTop: $(hash).offset().top
+    }, 900, function(){
+   
+      // Add hash (#) to URL when done scrolling (default click behavior)
+      window.location.hash = hash;
+    });
+  });
+})
+</script>
+
+
 
 </body>
 </html>
