--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -12,12 +12,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+  <!--
   <style>
   
-  body {
-    font: 400 15px/1.8 Lato, sans-serif;
-    color: #777;
-  }
   h3, h4 {
     margin: 10px 0 30px 0;
     letter-spacing: 10px;      
@@ -129,8 +126,7 @@
     resize: none;
   }
   </style>
-
-
+-->
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50" style="height:1500px">
@@ -152,9 +148,7 @@
         Datos de la Galería
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="">Datos Generales</a>
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -162,9 +156,7 @@
         Obras y Artistas
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
+        <a class="dropdown-item" href="Artistas">Link 1</a>
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -221,7 +213,7 @@
 </div>
 
 <div id="QhdN" class="container-fluid" style="margin-top:10px">
-  <h1>Que hay de nuevo?</h1>
+  <h1>¿Que hay de nuevo?</h1>
   <h3>Exhibiciones</h3>
   <p>
   	
@@ -231,7 +223,57 @@
   	
   </p>
   <h3>Grupo de visitas</h3>
+<style>
+/* Add a dark gray background color to the modal header and center text */
+.modal-header, h4, .close {
+  background-color: #333;
+  color: #fff !important;
+  text-align: center;
+  font-size: 30px;
+}
 
+.modal-header, .modal-body {
+  padding: 40px 50px;
+}
+</style>
+
+<!-- abrir el modal -->
+<button class="btn" data-toggle="modal" data-target="#myModal">Boletos</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Contenido -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4><span class="glyphicon glyphicon-lock"></span> Boletos </h4>
+      </div>
+      <div class="modal-body">
+        <form role="form">
+          <div class="form-group">
+            <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Boletos, $20 por persona </label>
+            <input type="number" class="form-control" id="psw" placeholder="Cuantos?">
+          </div>
+          <div class="form-group">
+            <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
+            <input type="text" class="form-control" id="usrname" placeholder="Ingresa Email">
+          </div>
+          <button type="submit" class="btn btn-block">Pagar
+            <span class="glyphicon glyphicon-ok"></span>
+          </button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
+          <span class="glyphicon glyphicon-remove"></span> Cancelar
+        </button>
+        <p>¿Necesitas <a href="#">ayuda?</a></p>
+      </div>
+    </div>
+  </div>
+</div>
   
 
 <div class="container-fluid" style="margin-top:80px">
@@ -250,7 +292,7 @@
   <div class="row text-center">
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CTonala.jpg" alt="CTonala" style="width: 50%; height: 100%;">
+      <img src="Tonala.jpg" alt="CTonala" style="width: 50%; height: 100%;">
       <p><strong>Ceti Tonala</strong></p>
       <p>Visita del 27 Noviembre 2019</p>
      <!-- <button class="btn">Buy Tickets</button>-->
@@ -258,7 +300,7 @@
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\CColomos.jpg" alt="CColomos" style="width: 50%; height: 70%;">
+      <img src="Colomos.jpg" alt="CColomos" style="width: 50%; height: 70%;">
       <p><strong>Ceti Colomos</strong></p>
       <p>Visita del 30 Febrero 2019</p>
       <!--<button class="btn">Buy Tickets</button>-->
@@ -266,7 +308,7 @@
   </div>
   <div class="col-sm-4">
     <div class="thumbnail">
-      <img src="C:\Users\Tito\Documents\GitHub\GaleriaArte\La chida\Imagenes\TEC.jpg" alt="TEC" style="width: 50%; height: 100%;">
+      <img src="tec.jpg" alt="TEC" style="width: 50%; height: 100%;">
       <p><strong>TEC de Monterrey</strong></p>
       <p>Visita del 30 Mayo 2019</p>
       <!--<button class="btn">Buy Tickets</button>-->
@@ -441,10 +483,10 @@ footer a:hover {
 
 <!-- Footer -->
 <footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+  <a class="" href="LoginPrin.html" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Footer</a></p> 
+  <p></a></p> 
 </footer>
 
 <script>
@@ -453,7 +495,7 @@ $(document).ready(function(){
   $('[data-toggle="tooltip"]').tooltip(); 
   
   // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+  $(".navbar a, footer a[href='LoginPrin.html']").on('click', function(event) {
 
     // Prevent default anchor click behavior
     event.preventDefault();
@@ -473,8 +515,6 @@ $(document).ready(function(){
   });
 })
 </script>
-
-
 
 </body>
 </html>
