--- a/La chida/LoginPrin.html
+++ b/La chida/LoginPrin.html
@@ -224,7 +224,15 @@
   <h1>Que hay de nuevo?</h1>
   <h3>Exhibiciones</h3>
   <p>
-  	
+  	<div class="col-sm-4">
+    <div class="thumbnail">
+      <img src="C:\xampp\htdocs\GaleriaArte\La chida\exposicion1.jpg" alt="CTonala" style="width: 50%; height: 100%;">
+      <p><strong>My country you do not exist en Páramo</strong></p>
+      <p>El mexicano Adrían S. Bará presenta pintura, dibujo, collage, instalación, escultura y video en esta nueva exposición.
+      4/diciembre/2019</p>
+     <!-- <button class="btn">Buy Tickets</button>-->
+    </div>
+  </div>
   </p>
   <h3>Eventos</h3>
   <p>
